midterm/test2_error.txt
test2.c: In function ‘main’:
test2.c:4:20: error: expected ‘;’ before ‘}’ token
    4 |  printf("Lninux\n")
      |                    ^
      |                    ;
    5 | }
      | ~                   
